--- a/mms-app-mern/mms-app/backend/package.json
+++ b/mms-app-mern/mms-app/backend/package.json
@@ -26,7 +26,7 @@
     "node-cron": "^3.0.2",
     "multer": "^1.4.5-lts.1",
     "csv-parser": "^3.0.0",
-    "json2csv": "^6.0.0",
+    "@json2csv/plainjs": "^7.0.6",
     "winston": "^3.10.0",
     "redis": "^4.6.7"
   },
